--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <% if signed_in? %>
 
 <% content_for :headcon do %>
+	<%= javascript_include_tag "home/main" %>
 	<%= stylesheet_link_tag    "home/main", :media => "all" %>
+	<%= javascript_include_tag "binders/icheck" %>
+    <%= stylesheet_link_tag    "widgets/icheck", :media => "all" %>
 <% end %>
 
 <div class="container">
@@ -379,7 +382,7 @@
 
 		</div>
 
-		<button class="btn" style="font-weight:bolder; font-size:14px; padding: 7px 20px; margin-left:25px">
+		<button id="newbinder" class="btn" style="font-weight:bolder; font-size:14px; padding: 7px 20px; margin-left:25px">
 			<%= image_tag('common/plus.png', :style => "float:left;margin-right:5px; margin-top:1px") %>
 			Create a new binder
 		</button>
@@ -389,6 +392,44 @@
 
 </div>
 
+
+
+
+
+
+
+
+
+
+
+<div id="addbinder-form" style="display:none">
+    <div class="headtitle">
+      Create new binder
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+        <input name="bindertitle" maxlength="50" class="firstfocus" style="width:300px" type="text" placeholder="Title of the new binder" />
+
+        <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the binder"></textarea>
+
+
+        <div style="margin-top:8px;margin-bottom:8px">
+        	<input type="checkbox" name="public" class="pub_on" checked="checked" />
+    	</div>
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Create binder!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
 
 <% end %>
 
