fix for feed thumbs

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,7 @@
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 											<% end %>
 
 											<div class="txtcon">
@@ -117,7 +117,7 @@
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 											<% end %>
 
 											<div class="txtcon">
@@ -155,10 +155,10 @@
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
 												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>')"></div>
+												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
 											<% else %>
 												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 												<% end %>
 											<% end %>
 
@@ -196,10 +196,10 @@
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
 												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>')"></div>
+												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
 											<% else %>
 												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 												<% end %>
 											<% end %>
 
@@ -238,10 +238,10 @@
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
 												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>')"></div>
+												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
 											<% else %>
 												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 												<% end %>
 											<% end %>
 
