--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -78,7 +78,8 @@
 
     		            
 
-	                      	<div class="single-hold" style="margin-top:-1px;background-image:url('<%= imgarr[0].to_s %>');<%= raw("background-position: -25px;") if !imgarr[2].to_s.empty? %>">
+	                      	<div class="single-hold" style="margin-top:-1px;background-image:url('<%= imgarr[0].to_s %>');<%= #raw("background-position: -25px;") if !imgarr[2].to_s.empty?  
+	                      	%>">
 
 	    		             </div>
 
