--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,11 +49,15 @@
 							<div class="feedcontent">
 								<div class="thetitle">
 									<!--<a href="#">Eric Simons</a> created <a href="#">Dynamic Earth Systems</a> two minutes ago.-->
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> created <a href="#"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+
+									<% 	# /5029db22c3e41e3a470000a3/portfolio/seed+binder/502afef1c3e41e0dcc000004
+										# /:username/portfolio(/:root)/:title/:id
+									%>
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> created <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1].id)) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 								<% if !f[:binder].body.empty? %>
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 
 											<div class="txtcon">
@@ -74,11 +78,11 @@
 
 							<div class="feedcontent">
 								<div class="thetitle">
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added a file to <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added a file to <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1]['id'])) %>"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
@@ -109,11 +113,11 @@
 
 							<div class="feedcontent">
 								<div class="thetitle">
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added content to <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added content to <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1]['id'])) %>"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
@@ -144,13 +148,13 @@
 
 							<div class="feedcontent">
 								<div class="thetitle">
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> updated <a href="#"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> updated <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 								<% #imgarr = Binder.get_folder_array(binder.id.to_s) if binder.type == 1 
 								%>
 
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
@@ -187,11 +191,11 @@
 
 							<div class="feedcontent">
 								<div class="thetitle">
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> changed the tags for <a href="#"><%= f[:binder].title  %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> changed the tags for <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title  %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
@@ -229,11 +233,11 @@
 
 							<div class="feedcontent">
 								<div class="thetitle">
-									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> shared <a href="#"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> shared <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
 								</div>
 
 
-								<a href="#" class="conlink">
+								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
 											<% if f[:binder].type==1 %>
@@ -276,7 +280,7 @@
 						</div>
 
 			<% end %>
-
+<!-- 
 			<div class="newsitem">
 				<div class="imgarea">
 					<a href="#">
@@ -352,7 +356,7 @@
 
 				<div style="clear:both"></div>
 			</div>
-
+ -->
 
 
 
