--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,61 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-	<%= devise_error_messages! %>
-
-	<div><%= f.label :title, "Title" %><br />
-	<!-- f.text_field :title -->
-	<%= f.select(:title, options_for_select( [["",""],["Mr.","Mr."],["Mrs.","Mrs."],["Ms.","Ms."],["Dr.","Dr."]] )) %></div>
-
-	<div><%= f.label :fname, "First Name" %><br />
-	<%= f.text_field :fname %></div>
-
-	<div><%= f.label :lname, "Last Name" %><br />
-	<%= f.text_field :lname %></div>
-
-	<div><%= f.label :email %><br />
-	<%= f.email_field :email %></div>
-
-	<div><%= f.label :username %><br />
-	<%= f.text_field :username %></div>
-
-	<div><%= f.label :password %><br />
-	<%= f.password_field :password %></div>
-
-	<div><%= f.label :password_confirmation %><br />
-	<%= f.password_field :password_confirmation %></div>
-
-	<div><%= f.submit "Sign up" %></div>
+<% content_for :headcon do %>
+    <%= stylesheet_link_tag    "devise/newuser", :media => "all" %>
+    <%= javascript_include_tag "editinfo/newuser" %>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+
+<div class="container">
+	<div class="formbox">
+	<h2>Join the exclusive beta.</h2>
+
+	<div style="color:#999;margin-bottom:15px;line-height:15px">
+		Congrats - you've been selected to be a part of our beta!<br />You're just a few seconds away from collaborating with the world's greatest educators.
+	</div>
+
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+
+<div class="errornote">
+	<%= devise_error_messages! %>
+</div>
+
+
+
+
+	<table border="0">
+		<tr>
+			<td class="labeler">Username</td>
+			<td class="firstfocus"><%= f.text_field :username %></td>
+		</tr>
+		<tr>
+			<td class="labeler">Password</td>
+			<td><%= f.password_field :password %></td>
+		</tr>
+		<tr>
+			<td class="labeler">Email</td>
+			<td><%= f.text_field :email %></td>
+		</tr>
+		<tr>
+			<td class="labeler">Title</td>
+			<td><%= f.select(:title, options_for_select( [["",""],["Mr.","Mr."],["Mrs.","Mrs."],["Ms.","Ms."],["Dr.","Dr."]] )) %></td>
+		</tr>
+		<tr>
+			<td class="labeler">First Name</td>
+			<td><%= f.text_field :fname %></td>
+		</tr>
+		<tr>
+			<td class="labeler">Last Name</td>
+			<td><%= f.text_field :lname %></td>
+		</tr>
+	</table>
+
+	<div style="color:#666;font-size:11px;margin-left:145px">You agree to our <a href="http://www.classconnect.com/legal/tos" target="_blank">terms of service</a></div>
+
+	<button type="submit" class="btn btn-primary btn-large" style="font-weight:bolder; margin-top:10px; margin-left:117px; width:220px">
+		Sign up!
+	</button>
+
+<% end %>
+
+
+	</div>
+</div>
