--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,356 +17,19 @@
 			What's happening now
 		</div>
 
-		<div class="whitebox">
 
-			<div style="margin-top:-15px"></div>
 
 			<% # ["create","createfile","createcontent","update","updatetags","setpub"] 
 			%>
 
-			<% @feed.each do |f| %>
+			<%= render 'layouts/feed' %>
 
-				<!--
-				<%= f[:owner].fname.to_s %>&nbsp;
-				<%= f[:owner].lname.to_s %>&nbsp;,&nbsp;
-				<%= f[:binder].title.to_s %>&nbsp;,&nbsp;
-				<%= f[:log].method.to_s %>&nbsp;,&nbsp;
-				<%= #Time.at(f[:log].timestamp).to_datetime 
-				%><%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago
-				<br />
-				-->
-						<div class="newsitem">
-							<div class="imgarea">
-								<a href="#">
-									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
-									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s if !f[:owner].info.nil? && !f[:owner].info.avatar.nil? %>>
-								</a>
-							</div>
 
-					<% 
-					case f[:log].method.to_s
 
-						when "create" %>
 
-							<div class="feedcontent">
-								<div class="thetitle">
-									<!--<a href="#">Eric Simons</a> created <a href="#">Dynamic Earth Systems</a> two minutes ago.-->
 
-									<% 	# /5029db22c3e41e3a470000a3/portfolio/seed+binder/502afef1c3e41e0dcc000004
-										# /:username/portfolio(/:root)/:title/:id
-									%>
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> created <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1]['id'])) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
 
-								<% if !f[:binder].body.empty? %>
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-
-											<div class="txtcon">
-												<div class="condesc">
-													<!--The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u>-->
-													<%= f[:binder].body %>
-												</div>
-											</div>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-								<% end %>
-
-							</div>
-
-					<% when "createfile" %>
-
-							<div class="feedcontent">
-								<div class="thetitle">
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added a file to <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1]['id'])) %>"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
-
-
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
-											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
-											<% end %>
-
-											<div class="txtcon">
-												<div class="contitle">
-													<!--Curiosity Landing Pictures (NASA Exclusive)-->
-													<%= f[:binder].title %>
-												</div>
-
-												<% if !f[:binder].body.empty? %>
-												<div class="condesc">
-													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
-													<%= f[:binder].body %>
-												</div>
-												<% end %>
-											</div>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-
-							</div>
-
-					<% when "createcontent" %>
-
-							<div class="feedcontent">
-								<div class="thetitle">
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added content to <a href="<%= named_binder_route(Binder.find(f[:binder].parents[1]['id'])) %>"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
-
-
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
-											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
-											<% end %>
-
-											<div class="txtcon">
-												<div class="contitle">
-													<!--Curiosity Landing Pictures (NASA Exclusive)-->
-													<%= f[:binder].title %>
-												</div>
-
-												<% if !f[:binder].body.empty? %>
-												<div class="condesc">
-													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
-													<%= f[:binder].body %>
-												</div>
-												<% end %>
-											</div>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-
-							</div>
-
-					<% when "update" %>
-
-							<div class="feedcontent">
-								<div class="thetitle">
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> updated <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
-
-								<% #imgarr = Binder.get_folder_array(binder.id.to_s) if binder.type == 1 
-								%>
-
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
-											<% if f[:binder].type==1 %>
-												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
-											<% else %>
-												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
-												<% end %>
-											<% end %>
-
-											<div class="txtcon">
-												<div class="contitle">
-													<!--Curiosity Landing Pictures (NASA Exclusive)-->
-													<%= #f[:binder].title 
-													%>
-												</div>
-
-												<% if !f[:binder].body.empty? %>
-												<div class="condesc">
-													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
-													<%= f[:binder].body %>
-												</div>
-												<% end %>
-											</div>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-
-							</div>
-
-					<% when "updatetags" %>
-
-							<div class="feedcontent">
-								<div class="thetitle">
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> changed the tags for <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title  %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
-
-
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
-											<% if f[:binder].type==1 %>
-												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
-											<% else %>
-												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
-												<% end %>
-											<% end %>
-
-											<div class="txtcon">
-												<div class="contitle">
-													<!--Curiosity Landing Pictures (NASA Exclusive)-->
-													<%= #f[:binder].title 
-													%>
-												</div>
-
-												<% if !f[:binder].body.empty? %>
-												<div class="condesc">
-													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
-													<%= f[:binder].body %>
-												</div>
-												<% end %>
-											</div>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-
-							</div>
-
-
-					<% when "setpub" %>
-
-							<div class="feedcontent">
-								<div class="thetitle">
-									<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> shared <a href="<%= named_binder_route(f[:binder]) %>"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
-								</div>
-
-								<% if f[:binder].type != 1 %>
-								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
-									<div class="thecontent">
-											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
-											<% if f[:binder].type==1 %>
-												<% imgarr = Binder.get_folder_array(f[:binder].id.to_s) %>
-												<div class="previmg" style="background-image: url('<%= imgarr[0].to_s %>');background-repeat: no-repeat;background-position: center;"></div>
-											<% else %>
-												<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
-													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
-												<% end %>
-											<% end %>
-
-											<% if !f[:binder].body.empty? %>
-											<div class="txtcon">
-												<div class="contitle">
-													<!--Curiosity Landing Pictures (NASA Exclusive)-->
-													<%= #f[:binder].title 
-													%>
-												</div>
-
-												<div class="condesc">
-													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
-													<%= f[:binder].body %>
-												</div>
-											</div>
-											<% end %>
-
-										<div style="clear:both"></div>
-									</div>
-								</a>
-								<% end %>
-
-							</div>
-
-
-					<% else %>
-						ERROR!<br />
-
-				<% end %>
-
-							<div style="clear:both"></div>
-						</div>
-
-			<% end %>
-<!-- 
-			<div class="newsitem">
-				<div class="imgarea">
-					<a href="#">
-						<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">
-					</a>
-				</div>
-
-
-				<div class="feedcontent">
-					<div class="thetitle">
-						<a href="#">Eric Simons</a> added new content to <a href="#">Dynamic Earth Systems</a> just a moment ago.
-					</div>
-
-
-					<a href="#" class="conlink">
-						<div class="thecontent">
-								<div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div>
-
-								<div class="txtcon">
-									<div class="contitle">
-										Curiosity Landing Pictures (NASA Exclusive)
-									</div>
-
-									<div class="condesc">
-										The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u>
-									</div>
-								</div>
-
-							<div style="clear:both"></div>
-						</div>
-					</a>
-
-				</div>
-
-
-				<div style="clear:both"></div>
-			</div>
-
-
-
-
-
-
-			<div class="newsitem">
-				<div class="imgarea">
-					<a href="#">
-						<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">
-					</a>
-				</div>
-
-
-				<div class="feedcontent">
-					<div class="thetitle">
-						<a href="#">Eric Simons</a> created <a href="#">Dynamic Earth Systems</a> two minutes ago.
-					</div>
-
-
-					<a href="#" class="conlink">
-						<div class="thecontent">
-
-								<div class="txtcon">
-									<div class="condesc">
-										The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u>
-									</div>
-								</div>
-
-							<div style="clear:both"></div>
-						</div>
-					</a>
-
-				</div>
-
-
-				<div style="clear:both"></div>
-			</div>
- -->
-
-
-
-
-
-
-		</div>
+		
 
 
 
