--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,21 @@
+<% content_for :headcon do %>
+    <%= stylesheet_link_tag    "devise/newuser", :media => "all" %>
+<% end %>
+
+<div class="container">
+<div class="formbox">
+
+
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, :as => resource_name, :url => teacher_password_path, :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <input type="text" placeholder="Enter your Claco email address" style="margin-top:10px;margin-bottom:10px" />
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><%= f.submit "Send me reset password instructions", :class => "btn btn-primary", :style => "font-weight:bolder" %></div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+
+</div>
+</div>
