--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -10,11 +10,11 @@
 
 
 		<div class="vanitybox">
-			<img src="/assets/public/jennie.jpeg" style="float:left" />
+			<img src="/assets/public/jerry.png" style="float:left" />
 
-			<img src="/assets/public/nasa.jpg" class="smaller" />
+			<img src="/assets/public/jennie.jpeg" class="smaller" />
 
-			<img src="/assets/public/erin.jpg" class="smaller" />
+			<img src="/assets/public/jeff.jpg" class="smaller" />
 
 		</div>
 
