--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -2,7 +2,10 @@
 
 
 	     <% if @children.empty? %>
-				Empty
+				<div class="emptyfolder">
+					We couldn't find anything here...yet!
+				</div>
+
 			<% else %>
 				<% @children.each do |binder| %>
 
