--- a/app/assets/stylesheets/home/public.css
+++ b/app/assets/stylesheets/home/public.css
@@ -26,9 +26,9 @@
      -moz-border-radius: 4px;
           border-radius: 4px;
 
-     -moz-box-shadow:0 0px 3px rgba(34,25,25,0.3);
-  -webkit-box-shadow:0 0px 3px rgba(34,25,25,0.3);
-  box-shadow: 0 0px 3px rgba(34,25,25,0.3);
+     -moz-box-shadow:0 0px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow:0 0px 3px rgba(34,25,25,0.4);
+  box-shadow: 0 0px 3px rgba(34,25,25,0.4);
 }
 
 .vanitybox .smaller{
@@ -47,7 +47,7 @@
 
 
 #apply-btn {
-  margin-left:75px;
+  margin-top:15px;
   font-size:16px;
   padding: 15px 20px;
   color:#fff;
