framework for portfolio

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -155,7 +155,9 @@
 		%>
 
     <div id="binders" class="tabswap">
-    <%= render 'layouts/binderlist' %>
+    <%= #render 'layouts/binderlist' 
+    %>
+    <%= render 'layouts/contentlist' %>
     </div>
 
 	<% #end 
