I think fisting should be called uppercunting

--- a/app/views/applicants/apply.html.erb
+++ b/app/views/applicants/apply.html.erb
@@ -49,7 +49,7 @@
 		</tr>
 		<tr>
 			<td class="labeler">About You</td>
-			<td><textarea name="body" style="height:100px" placeholder="How many years you have taught, your website / blog, links to example resources, etc"></textarea></td>
+			<td><%= f.text_area :body, :style => "height:100px", :placeholder => "How many years you have taught, your website / blog, links to example resources, etc" %></td>
 		</tr>
 	</table>
 
