--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -8,9 +8,10 @@
 <div class="container">
   <div class="profile-avatar-wrap">
     <img src="<%= @teacher.info.avatar.thumb_lg.url %>">
-    <span class="clips">
-      <strong>4,204</strong> snaps
-    </span>
+    <% #<span class="clips">
+      #<strong>4,204</strong> snaps
+    #</span>
+    %>
   </div>
 </div>
 
