erics last changes

--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -48,6 +48,8 @@
 
 <% end %>
 
+
+<div class="content-actions">
 <% if !@binder.current_version.embed %>
 	<% if @binder.format == 1 %>
 
@@ -59,3 +61,4 @@
 
 	<% end %>
 <% end %>
+</div>
