--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -165,7 +165,7 @@
 	%>
 <% #end 
 %>
-<div id="activity" class="tabswap" style="display:none">
+<div id="activity" class="tabswap feedwrap" style="display:none">
 
   <%= render 'layouts/feed' %>
 
