--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -1145,7 +1145,15 @@
 
 
 
-
+.content-actions {
+  background:#fff;
+  border:1px solid #ddd;
+  padding:10px;
+  margin: 10px 0 25px 0;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
 
 
 
