pretty teacher portfolio

--- a/app/views/layouts/_binderlist.html.erb
+++ b/app/views/layouts/_binderlist.html.erb
@@ -1,45 +1,65 @@
 <div class="content-list">
 
+	<% if @children.empty? %>
+		<div class="emptyfolder">We couldn't find anything here...yet!</div>
+	<% else %>
+	<% @children.each do |binder| %>
+		<% imgarr = Binder.get_folder_array(binder.id.to_s) %>
 
-	<div id="502ae10339fe36025b000027" class="content-item folder-item">
-		<div class="folder-preview">
-	        <div class="single-hold" style="margin-top:-1px;background-image:url('http://img.cla.co/68531f8ae0128c0eee2a3c082923caab/thumb_lg.png');background-position: -25px;"></div>
+			<div id="<%= binder.id.to_s %>" class="content-item folder-item">
+				<div class="folder-preview">
+			        <div class="single-hold" style="margin-top:-1px;background-image:url('<%= imgarr[0] %>');background-position: -25px;"></div>
 
-	    </div> <!-- end of fold prevew -->
+			    </div> <!-- end of fold prevew -->
 
-		<img class="thumby1" src="http://img.cla.co/3326f24eb6b9eaad63d84a1e85557037/thumb_sm.png" style="opacity:0" />
-		<img class="thumby1" src="http://img.cla.co/3326f24eb6b9eaad63d84a1e85557037/thumb_sm.png" />
-		<img class="thumby2" src="http://img.cla.co/61ea3a3207b6e3e703916bd88d770b54/thumb_sm.png" />
-		<img class="thumby3" src="/assets/common/nothumb.png" />
+			    <% if imgarr[1].nil? || imgarr[1].empty? %>
+					<img class="thumby1" src="/assets/common/nothumb.png" style="opacity:0" />
+				<% else %>
+					<img class="thumby1" src="<%= imgarr[1] %>" />
+				<% end %>
 
+			    <% if imgarr[2].nil? || imgarr[2].empty? %>
+					<img class="thumby2" src="/assets/common/nothumb.png" style="opacity:0" />
+				<% else %>
+					<img class="thumby2" src="<%= imgarr[2] %>" />
+				<% end %>
 
-	  	<div class="innerd">
-	        <div class="titler"><a href="/saget/portfolio/Math/Welcome+to+Claco/502ae10339fe36025b000027">Welcome to Claco</a></div>
+			    <% if imgarr[3].nil? || imgarr[3].empty? %>
+					<img class="thumby3" src="/assets/common/nothumb.png" style="opacity:0" />
+				<% else %>
+					<img class="thumby3" src="<%= imgarr[3] %>" />
+				<% end %>
 
-	        <div class="reflink">
-
-
-	        	<img src="/assets/binders/file.png" style="margin-top:-3px;margin-right:1px" />5 &bull; 4.28 MB
-
-
-	        </div>
-
-	        <div class="descarea">
-	        	Chemistry is the science of matter, especially its chemical reactions, but also its composition, structure and properties.[1][2] Chemistry is concerned with atoms and their interactions with other atoms, and particularly with the properties of chemical bonds.
-Chemistry is sometimes called "the central science" because it connects physics with other natural sciences such as geology and biology.[3][4] Chemistry is a branch of physical science but distinct from physics.[5]
-The etymology of the word chemistry has been much disputed...<u>show more</u>
-	        </div>
-	    </div>
-
-	    <div class="lastupdate">Last updated by <a href="#">saget</a> <span title="2012-08-14T17:06:33-07:00">about 3 hours ago</span></div>
-
-	    <div class="drop-tog">
-	    	
-
-	    </div>
+				<!--<img class="thumby1" src="<%= imgarr[2] %>" />
+				<img class="thumby2" src="<%= imgarr[3] %>" />
+				<img class="thumby3" src="/assets/common/nothumb.png" />-->
 
 
-	</div>
+			  	<div class="innerd">
+			        <div class="titler"><a href=<%= named_binder_route(binder) %>><%= binder.title.to_s %></a></div>
 
+			        <div class="reflink">
+
+
+			        	<img src="/assets/binders/file.png" style="margin-top:-3px;margin-right:1px" /><%= binder.files %> &bull; <%= number_to_human_size(binder.total_size) %>
+
+
+			        </div>
+
+					<div class="descarea"><%= binder.body.empty? ? "<span style='font-style:italic;color:#aaa'>No description</span>".html_safe : truncate(strip_tags(binder.body), :length => 250, :omission => "... <u>see more</u>").html_safe %></div>
+			    </div>
+
+		        <div class="lastupdate">Last updated by <%= link_to binder.username, "#{binder.username}" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
+
+			    <div class="drop-tog">
+			    	
+
+			    </div>
+
+
+			</div>
+
+		<% end %>
+	<% end %>
 
 </div>
