--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -155,9 +155,10 @@
 		%>
 
     <div id="binders" class="tabswap">
-    <%= #render 'layouts/binderlist' 
+    <%= render 'layouts/binderlist' 
     %>
-    <%= render 'layouts/contentlist' %>
+    <%= #render 'layouts/contentlist' 
+    %>
     </div>
 
 	<% #end 
