--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -53,7 +53,7 @@
 
               <div class="input-prepend" style="margin-left:10px">
                   <span class="add-on" style="margin-right:-14px">
-                    <img src="http://cdn1.iconfinder.com/data/icons/officeicons/PNG/48/Internet_link_02.png" style="height:14px; margin-top:-4px" />
+                    <img src="/assets/binders/link.png" style="height:14px; margin-top:-4px" />
                   </span>
 
                   <input type="text" onclick="$(this).select();" style="width:138px; margin-left:10px;background:#fff" value="http://claco.com/emsimons/portfolio/math/id" readonly />
